Closed
Bug 1397235
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::image::ImageSurfaceCache::SuggestedSize
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
VERIFIED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | unaffected |
| firefox57 | --- | verified |
People
(Reporter: calixte, Assigned: aosmond)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression, Whiteboard: [clouseau])
Crash Data
Attachments
(1 file)
|
5.04 KB,
patch
|
tnikkel
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-1a9cbcf7-bf56-4650-9847-66b180170906.
=============================================================
There are 18 crashes in nightly 57 with buildid 20170905220108. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1370412.
[1] https://hg.mozilla.org/mozilla-central/rev?node=536e6a1d3b4f990917a5d97765b29b25180512b7
Flags: needinfo?(aosmond)
| Reporter | ||
Updated•8 years ago
|
Crash Signature: [@ mozilla::image::ImageSurfaceCache::SuggestedSize] → [@ mozilla::image::ImageSurfaceCache::SuggestedSize]
[@ mozilla::image::ImageSurfaceCache::SuggestedSize const]
| Assignee | ||
Comment 1•8 years ago
|
||
I think I see the problem. Will fix.
Assignee: nobody → aosmond
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•8 years ago
|
||
try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=a2d984c62aebca72c465c9d22044b3450fb4bffc
Flags: needinfo?(aosmond)
| Assignee | ||
Updated•8 years ago
|
Component: Graphics → ImageLib
| Assignee | ||
Updated•8 years ago
|
Attachment #8905040 -
Flags: review?(tnikkel)
| Reporter | ||
Comment 3•8 years ago
|
||
Add the signature 'mozilla::WrapNotNull<T>' because the previous function in the backtrace is mozilla::image::ImageSurfaceCache::SuggestedSize (it's only present on FennecAndroid).
Crash Signature: [@ mozilla::image::ImageSurfaceCache::SuggestedSize]
[@ mozilla::image::ImageSurfaceCache::SuggestedSize const] → [@ mozilla::image::ImageSurfaceCache::SuggestedSize]
[@ mozilla::image::ImageSurfaceCache::SuggestedSize const]
[@ mozilla::WrapNotNull<T>]
Updated•8 years ago
|
Attachment #8905040 -
Flags: review?(tnikkel) → review+
Pushed by philringnalda@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/354981c2ee1f
Ensure that we reset factor-of-2 mode for an ImageSurfaceCache when it becomes empty. r=tnikkel
Comment 5•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
| Reporter | ||
Comment 6•8 years ago
|
||
No more crashes with these signatures on Socorro.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•